app/less/_dialog.less
.ngdialog {
  &.ngdialog-theme-default {
    .ngdialog-content {
      background-color: #fff;
    }
  }
}

.ngdialog-content {
  border-radius: 4px;
  box-shadow: 0 8px 30px fade(#000, 50%);
  padding: 20px;
  position: relative;

  .dialog-inner {
    .title {
      .section-title-black;
      border-bottom: 1px solid #f2f2f2;
      margin: 0;
      padding: 0 0 17px 0;
    }
    .dialog-body {
      .content {
        .text-default;
        padding: 17px 0 36px 0;
      }

      .content-media {
        margin-top: 20px;

        .form-group {
          label {
            .text-grey-small;
            color: @iConnect-black;
          }

          .form-control {
            .text-default;

            border: 1px solid #f2f2f2;
            border-radius: 2px;
            box-shadow: none;
            background-color: #fafafa;

            padding: 7px 10px;
            margin-bottom: 20px;
            word-wrap: break-word;

            transition: background-color .1s linear;

            &:focus {
              background-color: @iConnect-white;
              outline: none;
            }

            &[disabled] {
              background-color: #fafafa;
              cursor: default;
            }
          }
        }
      }

      .content-icon {
        padding: 7px 10px;
        display: block;
        margin: 17px;

        .icon {
          display: block;
          margin-bottom: 20px;

          img {
            display: block;
            margin: 0 auto;
            width: 60px;
            max-width: 60px;
            height: auto;
          }
        }
        .message {
          display: block;
          text-align: center;
          margin: 0 auto;
          .text-default;
        }
      }

      .content-photo {
        margin-bottom: 9px;
        position: relative;

        img {
          width: 100%;
          max-width: 100%;
          height: auto;
          display: block;
          border-radius: 4px;
        }

        .shade-layer {
          position: absolute;
          width: 100%;
          height: 100%;
          top: 0;
          left: 0;
          background-color: rgba(255, 255, 255, .8);

          .progress {
            position: absolute;
            top: 50%;
            display: block;
            width: 84%;
            left: 50%;
            transform: translate(-50%, -50%);
            margin-bottom: 0;
            overflow: visible;

            .progress-bar {
              position: relative;
              overflow-x:visible;
              white-space:nowrap;
              color:black; /* color is for demo purposes */
              background-color: #ff5400;

              .percent {
                .text-default;
                color: #e62117;
                position: absolute;
                top: -17px;
                right: 0;
              }
            }
          }
        }
      }

      .content-list {
        padding: 20px 0 0 0;
        max-height: 350px;
        overflow-y: scroll;
        overflow-x: hidden;
        border-bottom: 1px solid #f2f2f2;
        margin-bottom: 20px;

        .list-item {
          display: flex;
          flex-direction: row;
          align-items: center;
          justify-content: space-between;
          margin-bottom: 10px;
          overflow: hidden;
          padding: 0 10px 0 0;

          .photo {
            img {
              max-width: 80px;
              height: auto;
              border-radius: 2px;
            }
          }

          .responce {
            .text-default;
            max-width: 130px;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            margin-left: 20px;
            margin-right: auto;
            flex-grow: 3;

            &.success {
              color: #00b700;
            }
            &.processing {
              color: #333;
            }
            &.error {
              color: #e62117;
            }
          }

          .action {
            padding-right: 5px;

            a {
              .text-default;
              color: #999;
              display: block;
            }
          }
        }
      }

      .helper {
        .text-grey-small;
        color: #f00;
        font-weight: @fw-regular;
        margin-bottom: 20px;
      }

      .ic-btn {
        display: block;
        margin: 10px auto 0;
        width: 100%;
        max-width: none;

        &.disabled {
          opacity: .6;
          border-color: transparent;

          &:hover {
            opacity: .6;
            border-color: transparent;
          }
        }

      }
    }
  }

  .progress {
    height: 4px;
    background-color: #fafafa;
    margin-bottom: 36px;

    .progress-bar {
      background-color: #00B700;
    }
  }

}

